org.apache.myfaces.NUMBER_OF_VIEWS_IN_SESSION по умолчанию 20 т.е только 20 раз можно перейти по контейнеру :) было